--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -109,7 +109,7 @@ form {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     border: none;
-    cursor: none;
+    cursor: pointer;
     font-size: 16px;
     color: #fff;
     font-weight: 600;  
